# pgs

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  README.md  test.cpp  vcpkg.json
docs/: pyproject.toml
docs/src/: api-overview.md  color-conversion.md  conf.py  index.md  pgs-format.md  python.md  rle-encoding.md
pgs-python/: Cargo.toml  pyproject.toml
pgs-python/src/: bitmap.rs  color.rs  display_set.rs  error.rs  lib.rs  py_reader.rs  reader.rs  segment.rs  subtitle.rs  time.rs
pgs-python/tests/: conftest.py  test_bitmap.py  test_color.py  test_error.py  test_reader.py  test_time.py
scripts/: build.sh  install.sh
scripts/cmake/: bundled-vcpkg.cmake
src/: bitmap.rs  bitmap_tests.rs  color.rs  color_tests.rs  display_set.rs  display_set_tests.rs  error.rs  error_tests.rs  lib.rs  pgs.hpp  read.rs  read_tests.rs  rle.rs  rle_tests.rs  segment.rs  segment_tests.rs  subtitle.rs  time.rs  time_tests.rs
src/pgs/: algorithm.hpp  base.hpp  bitmap.hpp  colors.hpp  colors.inl.hpp  pgs.hpp  rl_encoding.hpp  rl_encoding.inl.hpp  rle.hpp  rle.inl.hpp  segment.hpp  segment.inl.hpp  serialization.hpp  serialize.hpp  utility.hpp
src/pgs/pgs/: bitmap.hpp  displayset.hpp  exceptions.hpp  rle.inl.hpp  segment.hpp  segment.inl.hpp  utility.hpp
src/pgs/pgs/serialization/: meta.hpp  meta_builtins.hpp  traits.hpp
src/pgs/pgs/utility/: std_generator.hpp
src/pgs/serialization/: bytes.hpp  meta.hpp  meta_builtins.hpp  resized_integral.hpp  traits.hpp
src/pgs/utility/: generator.hpp
src/scripts/: pgs-extract.cpp
src/segment/: parse.rs  types.rs
tests/: basic.cpp  colors.cpp  read.rs  serialization.cpp
tests/data/: sample-1.sup  sample-2.sup
