[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pgs"
version = "0.1.0"
requires-python = ">=3.9"
license = "MPL-2.0"
description = "Python bindings for the pgs PGS subtitle parser"
dynamic = []

[dependency-groups]
dev = ["pytest>=8", "maturin>=1.0,<2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pgs"
